# anime-character-image-preprocessing

./: .gitignore  AGENTS.md  AnimePreprocessing.spec  LICENSE  README.md  README_CN.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
image_crawler/: __init__.py  config.py  config_temp.py  image_crawler.py
image_crawler/collector/: collector.py  collector_unit.py  selectors.py
image_crawler/crawlers/: users_crawler.py
image_crawler/downloader/: download_image.py  downloader.py
module/: __init__.py  cli.py  config_temp.py  image_cropper.py  image_processor.py  image_renamer.py  utils.py
module/hf_downloader/: __init__.py  hf_downloader.py
module/image_crawler/: image_crawler.py  utils.py
module/image_crawler/collector/: collector.py  collector_unit.py  selectors.py
module/image_crawler/crawlers/: __init__.py  keyword_crawler.py  users_crawler.py
module/image_crawler/downloader/: __init__.py  download_image.py  downloader.py
module/image_cropper/: __init__.py  auto_cropper.py  boundary_cropper.py  face_detector.py  head_detector.py  image_cropper.py  onnx_.py  plot.py  smart_cropper.py  yolo_.py
module/image_processor/: __init__.py  image_processor.py
module/image_renamer/: __init__.py  image_renamer.py
module/image_scaler/: __init__.py  image_scaler.py  real_esrgan.py  utils.py
module/image_scaler/model/: README.md
module/image_scaler/realesrgan/: __init__.py  utils.py
module/image_scaler/realesrgan/archs/: __init__.py  discriminator_arch.py  srvgg_arch.py
module/image_tagger/: __init__.py  image_tagger.py
module/image_tagger/model/: README.md
module/model/: README.md
webui/: __init__.py  app.py
webui/tabs/: __init__.py  boundary_crop.py  pixiv_crawler.py  remove_bg.py  rename.py  smart_crop.py  tagging.py  upscale.py
