[project]
name = "sd-character-image-preprocessing"
version = "0.1.0"
description = "Anime character image preprocessing tool for Stable Diffusion training datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pengju Zhang", email = "inupedia.official@gmail.com"},
]
keywords = ["anime", "image-processing", "stable-diffusion", "dataset"]

dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "rembg>=2.0.60",
    "Pillow>=10.0.0",
    "charset-normalizer>=3.3.0",
    "cssselect>=1.2.0",
    "idna>=3.4",
    "lxml>=5.0.0",
    "pyquery>=2.0.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "urllib3>=2.0.0",
    "dghs-imgutils>=0.8.0",
    "huggingface-hub>=0.25.0,<2.0.0",
    "onnxruntime>=1.20.0",
    "pandas>=2.0.0",
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Inupedia/sd-character-image-preprocessing"
Repository = "https://github.com/Inupedia/sd-character-image-preprocessing"

[project.scripts]
sd-preprocess = "module.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["module", "webui"]

[tool.uv]
override-dependencies = [
    "numpy>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
